ketigian comments and overflow fix

--- a/app/page.css
+++ b/app/page.css
@@ -1,22 +1,15 @@
 body {
   background-color: black;
   color: white;
-  font-size: 14px
-}
-
-.center-div {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  font-size: 14px;
 }
 
 .centered-window {
   position: absolute;
   top: 0;
-  right: 5%;
+  right: 2%;
   bottom: 0;
-  left: 5%;
+  left: 2%;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -26,6 +19,9 @@ body {
 .normal-text {
   display: block;
   max-width: 600px;
+  max-height: 100%;
+  overflow: auto;
+  font-family: monospace;
 }
 
 a {
